--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -54,7 +54,7 @@
             "critical":25,
         },
         "format": "{icon}  {capacity}% {time} {power:0.0f}W",
-        "format-charging": " {capacity}% {power:0.0f}W",
+        "format-charging": " {capacity}% {power:0.0f}W {cycles} cycles",
         "format-plugged": " {capacity}% {power:0.0f}W",
         "format-full": "{icon} ",
         "format-icons": ["", "", "", "", ""],
@@ -110,15 +110,15 @@
     },
     "network": {
         "interval": 5,
-        "format-wifi": "  {essid} {signalStrength}%  {bandwidthUpBytes}  {bandwidthDownBytes}",
+        "format-wifi": "  {essid} {signalStrength}%",
         "format-ethernet": " {ipaddr}/{cidr}  {bandwidthUpBytes}  {bandwidthDownBytes}",
         "tooltip-format": "{ipaddr}/{cidr} via {gwaddr} dev {ifname}",
-        "tooltip-format-wifi": "{ipaddr}/{cidr} via {gwaddr} dev {ifname} ({frequency} GHz)",
+        "tooltip-format-wifi": "{ipaddr}/{cidr} via {gwaddr} dev {ifname} ({frequency} GHz)\n {bandwidthUpBytes}  {bandwidthDownBytes}",
         "format-linked": " {ifname} (No IP)",
         "format-disconnected": "⚠ DISCONNECTED",
     },
     "network#vpn": {
-        "interface": "wg-mullvad",
+        "interface": "wg0-mullvad",
         "format": "",
         "format-disconnected": " VPN OFF",
         "tooltip-format": "VPN {ipaddr}/{cidr} dev {ifname}",
