--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 /.*[_-]history
 /.AndroidStudio*/
-/.espressif/
-/.platformio/
 /.ICEauthority
 /.NERDTreeBookmarks
 /.Xauthority
-/.arduino*/
-/.local/
 /.android/
 /.apvlvinfo
-/.msf4/
+/.arduino*/
 /.aws/
 /.babel.json
 /.bash_*
@@ -20,7 +16,6 @@
 /.cargo/
 /.cargo/registry/
 /.chef/
-/.terraform.d/
 /.chefdk/cache/
 /.cinc-workstation/
 /.cinc/
@@ -34,6 +29,8 @@
 /.elinks/
 /.elm/
 /.esd_auth
+/.espressif/
+/.freemind/
 /.gem/
 /.ghc/
 /.gnupg/
@@ -51,10 +48,13 @@
 /.ipfs/
 /.ipython/
 /.java/
+/.kitchen/
 /.kitchen/cache/
 /.lesshst
+/.local/
 /.local/share/
 /.mozilla/
+/.msf4/
 /.netrc
 /.nix-*
 /.node-gyp/
@@ -62,11 +62,13 @@
 /.nvidia-settings-rc
 /.nvm/
 /.octave_hist
+/.ollama/
 /.pEp*
 /.packer.d/
 /.pgadmin3
 /.pgpass
 /.pki/
+/.platformio/
 /.pulse-cookie
 /.purple/
 /.pyenv/
@@ -82,6 +84,7 @@
 /.stack/
 /.subversion/
 /.sudo_as_admin_successful
+/.terraform.d/
 /.thunderbird/
 /.torcs/
 /.tox/
