--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,19 +1,33 @@
-# Run a "pure" Wayland session
+# run a "pure" Wayland session
 xwayland disable
 
-# Swap mouse buttons
+bar swaybar_command waybar
+default_border pixel 1
+font pango:DejaVuSansMono 12
+set $mod Mod1
+
+# use Mouse+$mod to drag floating windows to their wanted position
+floating_modifier $mod
+
+# set monitor layout
+# BOE integrated display
+output eDP-1 pos 320 1440
+# Dell monitor
+output DP-1 pos 0 0 scale 1.5
+
+# set background
+output * bg ~/.wallpaper.jpg fill
+
+# swap mouse buttons
 input type:pointer left_handed enabled
 
-set $mod Mod1
-font pango:DejaVuSansMono 12
-default_border pixel 1
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+input type:touchpad {
+    accel_profile "flat" # disable mouse acceleration
+    pointer_accel 0.5 # increase mouse sensitivity
+}
 
 # start a terminal
 bindsym $mod+Return exec kitty
-#bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -27,23 +41,11 @@ bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
 # move focused window
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 bindsym $mod+h split h
@@ -64,12 +66,6 @@ bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -95,9 +91,8 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
-# move to external monitor
-bindsym $mod+Shift+x move workspace to output right
-bindsym $mod+Shift+z move workspace to output left
+# move to "next" monitor/output
+bindsym $mod+x exec "swaymsg -t get_outputs | jq '[.[] | select(.active == true)] | .[(map(.focused) | index(true) + 1) % length].name' | xargs swaymsg move workspace to"
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -115,12 +110,6 @@ mode "resize" {
         bindsym l resize shrink height 10 px or 10 ppt
         bindsym semicolon resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
         # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -128,13 +117,11 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Make the currently focused window a scratchpad
+# make the currently focused window a scratchpad
 bindsym $mod+Shift+minus move scratchpad
 
-# Show the first scratchpad window
+# show the first scratchpad window
 bindsym $mod+minus scratchpad show
-
-bar swaybar_command waybar
 
 # Lock screen
 bindsym $mod+Delete exec swaylock --show-failed-attempts -i ~/.wallpaper.jpg
@@ -161,9 +148,6 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 9
 
 # Music controls
 bindsym XF86AudioMicMute exec pkill -f 'vlc -I ncurses'
-
-# Background
-output "*" bg ~/.wallpaper.jpg fill
 
 # lock the screen after 10 minutes and turn it off five seconds later
 exec swayidle -w \
