Handle monitor when re-plugging

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -14,6 +14,7 @@ floating_modifier $mod
 output eDP-1 pos 320 1440
 # Dell monitor
 output DP-1 pos 0 0 scale 1.5
+output DP-2 pos 0 0 scale 1.5
 # Samsung monitor
 output HDMI-A-2 pos 0 0
 
