Add borg and aconfmgr to tmuxp

--- a/.config/tmuxp/system.yml
+++ b/.config/tmuxp/system.yml
@@ -17,3 +17,11 @@ windows:
   panes:
   - btop
   window_name: btop
+- layout: tiled
+  panes:
+  - journalctl --user -fu borgmatic-user
+  window_name: borg
+- layout: tiled
+  panes:
+  - cd .config/aconfmgr
+  window_name: aconfmgr
